migrations and basic structure

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 PORT=3000
 NODE_ENV=dev
+DB_URL=postgres://myuser:mypass@localhost:5432/mydb
+DB_URL_TEST=postgres://myuser:mypass@localhost:5432/mydb_test
