--- a/package.json
+++ b/package.json
@@ -5,31 +5,41 @@
   "scripts": {
     "dev": "tsx --watch --env-file=.env ./src/main.ts",
     "clean": "rimraf dist",
-    "start": "node dist/main.js",
-    "check": "npx @biomejs/biome check --write ./src",
+    "start": "node dist/src/main.js",
+    "check": "npx @biomejs/biome check ./src",
+    "fix": "npx @biomejs/biome check --write ./src",
     "build": "npm run clean && tsc",
     "test": "jest --coverage",
     "test:ut": "NODE_ENV=dev jest --coverage ./src",
-    "test:it": "NODE_ENV=dev jest --coverage ./specs"
+    "test:it": "NODE_ENV=dev jest --coverage ./specs",
+    "prepare": "husky",
+    "migration:create": "sequelize-cli migration:create --migrations-path ./migrations --name ",
+    "migration:run": "npm run build && npx dotenv-cli -e .env -- sequelize-cli db:migrate --migrations-path ./dist/migrations",
+    "migration:undo": "npm run build && npx dotenv-cli -e .env -- sequelize-cli db:migrate:undo --migrations-path ./dist/migrations"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "Allan Larangeiras",
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
     "@types/node": "20.14.11",
+    "@types/sequelize": "4.28.20",
+    "dotenv-cli": "7.4.2",
+    "husky": "9.1.1",
     "jest": "29.7.0",
     "jest-html-reporters": "3.1.7",
     "rimraf": "6.0.1",
+    "sequelize-cli": "6.6.2",
     "ts-jest": "29.2.3",
     "tsx": "4.16.2",
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@hapi/joi": "17.1.1",
     "express": "4.19.2",
+    "joi": "17.13.3",
+    "pg": "8.12.0",
+    "sequelize": "6.37.3",
     "zod": "3.23.8"
   }
 }
